test/should-fail/jfxc1913.visage
/**
 * regression test: JFXC-1913 : Check that non-'abstract' has function body
 *
 * @test/compile-error
 */

abstract class Foo {
    function bar() : String
}
